# axleware-telematics

./: BENCHMARK.md  Cargo.toml  Dockerfile  README.md  benchmark.yaml  demo.yaml
.github/workflows/: Arko.yml  ci.yml
infra/k8s/: deployment.yaml
infra/terraform/: firmware.tf  iot.tf  main.tf
src/: config.rs  main.rs
src/handlers/: firmware.rs  vehicles.rs
src/parsers/: can.rs
src/services/: ota.rs  tokens.rs  uplink.rs
src/transport/: tls.rs
